# embedded-drivers

./: .gitignore  README.md
drv/imx6ull/hello/: CMakeLists.txt  mk.sh
drv/imx6ull/hello/app/: hello_test.c
drv/imx6ull/hello/drv/: Makefile  common_inc.h  hello.c
drv/imx6ull/hello/include/: MCIMX6Y2.h
drv/linux/: README.md
drv/linux/hello/: CMakeLists.txt
drv/linux/hello/app/: Makefile  hello_test.c  hello_test.h
drv/linux/hello/common_inc/: hello_typedefs.h  ioctl_cmds.h
drv/linux/hello/common_inc/imx6ull/: bsp.h
drv/linux/hello/drv/: CMakeLists.txt  Makefile  common_inc.h  hello.c  hello.h  hello_handle.h
imx6ull/hello/: hello_mod_normal.ko  mk.sh
imx6ull/hello/drv/: .hello.o.cmd  .hello_mod_normal.ko.cmd  .hello_mod_normal.mod.o.cmd  .hello_mod_normal.o.cmd  CMakeLists.txt  hello_mod_normal.mod.c  modules.order
imx6ull/hello/drv/.tmp_versions/: hello_mod_normal.mod
imx6ull/hello/include/: fsl_iomuxc.h
